After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755607 - ptpclock: Fix error leak during failures
ptpclock: Fix error leak during failures
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.6.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-25 01:18 UTC by Vineeth
Modified: 2015-09-25 08:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix error leaks during failures (1.92 KB, patch)
2015-09-25 01:19 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-09-25 01:18:01 UTC
Error variables are getting leaked during failures
Comment 1 Vineeth 2015-09-25 01:19:19 UTC
Created attachment 312102 [details] [review]
fix error leaks during failures
Comment 2 Sebastian Dröge (slomo) 2015-09-25 08:15:41 UTC
commit dc0ae9203a6d166124fda57d6a023b2fc57138ae
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Fri Sep 25 10:18:07 2015 +0900

    ptpclock: Fix error leak during failures
    
    https://bugzilla.gnome.org/show_bug.cgi?id=755607