ptpclock: Fix error leak during failures

https://bugzilla.gnome.org/show_bug.cgi?id=755607